<resources>
    <string name="app_name">Sulamot</string>
    <string name="action_favorite">favorite action</string>
    <string name="action_home">סולמות</string>
    <string name="enter_perek">אנא הכנס פרק</string>
    <string name="enter_parasha">אנא הכנס פרשה</string>
    <string name="perek">פרק</string>
    <string name="mekorot">תוצאות</string>
    <string name="perek_or_parasha_name_extra">perekOrParashaName</string>
    <string name="perek_or_parasha_uri_extra">perekOrParashaUri</string>
    <string name="parashot_and_uri_extra">parashotAndUri</string>
    <string name="please_wait_he">אנא המתן</string>
    <string name="prakim_and_uri_extra">prakimAndUri</string>
    <string name="parasha">פרשה</string>
    <string name="psukim_uris_extra">psukimUris</string>
    <string name="makor_uri">makorUri</string>
    <string name="makor_text">makorText</string>
    <string name="makor_author">makorAuthor</string>
    <string name="makor_title">makorTitle</string>
    <string name="mekorot_reference">אזכור במקורות</string>
    <string name="choose_category_to_filter">בחר קטגוריות לסינון</string>
    <string name="choose_font_size">בחר גודל פונט</string>
    <string name="choose_font_style">בחר פונט</string>
    <string name="choose_button">בחר</string>
    <string name="cancel_button">בטל</string>
    <string name="close_button">סגור</string>
    <string name="num_of_mekorot">"תוצאות: "</string>
    <string name="jbr_prefix">jbr:</string>
    <string name="psukim">פסוקים</string>
    <string name="favorites">נבחרים</string>
    <string name="favorites_uri_prefix">uri***</string>
    <string name="favorites_name_prefix">name***</string>
    <string name="favorites_text_prefix">text***</string>
    <string name="favorites_file_name">favorites</string>
    <string name="choose_sharing_option">בחר אופן שיתוף</string>
    <string name="report_no_ident">דיווח אי-זיהוי</string>
    <string name="full_text_share_option">טקסט מלא</string>
    <string name="link_to_text_share_option">קישור לאתר</string>
    <string name="makor_removed_from_favorites">מקור הוסר מנבחרים</string>
    <string name="makor_added_to_favorites">מקור הוסף לנבחרים</string>
    <string name="alert_error">שגיאה</string>
    <string name="alert_connection_error_info">התרחשה שגיאה בחיבור לשרת - אנא נסה שנית מאוחר יותר.</string>
    <string name="unchoose_all">נקה בחירה</string>
    <string name="choose_all">בחר הכל</string>
    <string name="next_chapter">הבא</string>
    <string name="prev_chapter">הקודם</string>
    <string name="search_substr_txt">חיפוש טקסט:</string>
    <string name="app_name_he">סולמות</string>
    <string name="share">שתף</string>
    <string name="return_to_main">חזרה לעמוד ראשי</string>
    <string name="report_error">דווח על שגיאה</string>
    <string-array name="spinner_items">
        <item> פרשה</item>
        <item> פרק</item>
        <item> טקסט חופשי</item>
    </string-array>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">סולמות - חיפוש מבוסס פסוקים</string>
    <string name="nav_header_subtitle">המעבדה למידע וידע - הטכניון</string>
    <string name="nav_header_desc">סולמות</string>
    <string name="title_activity_favorites">תוצאות נבחרות</string>
    <string name="nav_item_favorites">תוצאות נבחרות</string>
    <string name="nav_item_settings">הגדרות</string>
    <string name="nav_item_help">עזרה ומשוב</string>
    <string name="bad_ident_text">זיהוי לא נכון של פסוק</string>
    <string name="partial_ident_text">זיהוי חלקי</string>
    <string name="free_text_text">טקסט חופשי</string>
    <string name="free_text_hint">(אופציונלי) פרט עוד על השגיאה שזוהתה</string>
    <string name="send">שלח</string>
</resources>
