<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alert_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_error_report_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/Black"
        android:textSize="17dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rad_err_report_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rad_bad_ident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/bad_ident_text" />

        <RadioButton
            android:id="@+id/rad_part_ident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partial_ident_text" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/free_text_text"
        android:textColor="@color/Black"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/err_rep_free_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/elemnt_border"
        android:hint="@string/free_text_hint"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="4" />

    <Button
        android:id="@+id/btn_err_report_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/send" />

</LinearLayout>