<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filtering_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/choose_category_to_filter"
        android:textColor="@color/Black"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/filtering_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:divider="@android:color/transparent"
        android:layoutDirection="rtl"
        android:orientation="vertical">

    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/choose_button"
            android:textColor="@color/SteelBlue" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel_button"
            android:textColor="@color/SteelBlue" />

        <Button
            android:id="@+id/btn_clear_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/unchoose_all"
            android:textColor="@color/SteelBlue" />


    </LinearLayout>

</LinearLayout>