<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:elevation="2dp"
        android:gravity="end"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/unchoose_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="2dp"
            android:focusable="true"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/unchoose_all_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="10dp"
                android:text="@string/unchoose_all"
                android:textColor="@color/Black" />

            <ImageView
                android:id="@+id/unchoose_all_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_unchoose_all" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/choose_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="2dp"
            android:focusable="true"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/choose_all_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/choose_all"
                android:textColor="@color/Black" />

            <ImageView
                android:id="@+id/choose_all_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_choose_all_unselected" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/perekBrowsing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DodgerBlue">

        <LinearLayout
            android:id="@+id/next_perek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="2dp"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"

                android:src="@drawable/ic_next_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="10dp"
                android:text="@string/next_chapter"
                android:textColor="@color/White" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/prev_perek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="2dp"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="10dp"
                android:text="@string/prev_chapter"
                android:textColor="@color/White" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:src="@drawable/ic_prev_arrow" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>